--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+* {
+  font-family: "Open Sans", sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: "Open Sans", sans-serif;
 }
 
 code {
